# ByteTrack-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/ByteTrack/: BYTETracker.cpp  BYTETracker.h  KalmanFilter.cpp  KalmanFilter.h  Object.h  Rect.cpp  Rect.h  STrack.cpp  STrack.h  lapjv.cpp  lapjv.h
